<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MemoryGame</string>
    <string name="Home">Home</string>
    <string name="WelcomeUser">WELCOME %1$s !!! WE GOING TO START PLAYING</string>
    <string name="NewGame">New Game</string>
    <string name="ResumeGame">Resume Game</string>
    <string name="UpdateNickname">Manage my Nickname</string>
    <string name="History">History</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_manage_nickname">ManageNicknameActivity</string>
    <string name="Nickname">My nickname</string>
    <string name="Submit">Submit</string>
    <string name="title_activity_welcome">MemoryGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="lblTime">Time :</string>
    <string name="lblNbBeats">Numbers of beats:</string>
    <string name="btnSolve">Solve Game</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="BackHome">Home</string>
    <string name="Scores">Scores</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congrats">Congratulations !!!!!!</string>
    <string name="btnOk">OK</string>
    <string name="searchName">Search pseudo</string>
    <string name="EnterUserSearch">Nickname searched</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="NumberRowsFound">scores found</string>
    <string name="GameWin">GAME ENDED WITH  %1$d  beats in %2$s  </string>
    <string name="Congratulations">Congratulations !!!!</string>
    <string name="scoreDeleted">Score deleted !</string>

</resources>
