<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity"
    android:clickable="true"
    android:orientation="vertical">

    <TextView android:text="@string/Home" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/material_blue_grey_800"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="32dp"
        />
    <TextView
        android:id="@+id/txtViewWelcome"
        android:text="@string/WelcomeUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="14dp"
        />
    <Button
        android:id="@+id/btnManageNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UpdateNickname"
        android:onClick="btnManageNickname"/>
    <Button
        android:id="@+id/btnResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResumeGame"
        android:enabled="false"
        android:onClick=""/>
    <Button
        android:id="@+id/btnNewGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NewGame"
        android:onClick="btnNewGame"/>
    <Button
        android:id="@+id/btnLastGames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LastGames"
        android:onClick="btnLastGames" />

</LinearLayout>
