<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ridley.memorygameesgi.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#F00">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/lblTime"
                android:background="#FFF"/>
            <Chronometer
                android:id="@+id/chrono"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#FFF"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <TextView
                    android:id="@+id/lblNbBeats"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/lblNbBeats"
                    android:background="#FFF"/>
                <TextView
                    android:id="@+id/txtNbBeats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:background="#FFF"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:columnWidth="50dp"
        android:numColumns="6"
        android:background="#FF0"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#47A440">
    <Button
        android:id="@+id/btnSolve"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/btnSolve"
        android:onClick="clickSolve"/>
    </LinearLayout>

</LinearLayout>
